Temporary Fix
+ The calculator and ResultTable is "kind of" working now. Not as
intended though.
+ Progress being made!
- I don't look forward to the clean up...

--- a/ExempelProjekt/war/ExempelProjekt.css
+++ b/ExempelProjekt/war/ExempelProjekt.css
@@ -3,15 +3,32 @@
 	background-color: lightgrey;
 }
 
+h1 {
+    text-align: center;
+}
+
 /** The calculator **/
 .calc {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 190px;
+    height: 250px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    
 	box-shadow: 5px 2px 10px black;
 	border-color: black;
 	border-width: 2px;
 	border-radius: 15px;
 	border-style: solid;
+    
 	display: inline-block;
 	padding: 10px;
+    
 	background-color: dimgrey;
 }
 
@@ -132,4 +149,38 @@
 
 .calc__sign:active, .calc__number:active, #equals:active, #clearResult:active, #removeLast:active {
 	transform: translateY(3px);
+}
+
+/* Results Table */
+
+#resultsTable {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 760px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 400px;
+}
+
+/* Resultslist header row */
+.resultsListHeader {
+  background-color: #2062B8;
+  color: white;
+  font-style: italic;
+}
+
+/* Resultslist flex table */
+.resultsList {
+  border: 1px solid silver;
+  padding: 2px;
+  margin-bottom:6px;
+}
+
+/* resultslist Columns */
+.resultsListColumn {
+  text-align: center;
+  width: 380px;
 }
